[Fix] Better spacing

--- a/20190130-rails-homework/rails_homework_11b_15/EventSystem/app/assets/stylesheets/people.scss
+++ b/20190130-rails-homework/rails_homework_11b_15/EventSystem/app/assets/stylesheets/people.scss
@@ -8,8 +8,10 @@
 {
     background-color: antiquewhite  ;
     margin: 30px;
+    padding: 10px;
     display: inline;
     text-align: center;
+    border-radius: 15px;
 }
 
 .personal
@@ -24,10 +26,11 @@
 
 .wrapper
 {
-    margin: 20px;
+    margin: 30px;
 }
 
 #new-events
 {
-    clear: both ;
+    clear: both;
 }
+
